[package]
name = "packet_sniffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
etherparse = "0.12.0"
clap = { version = "3.2.6", features = ["derive"] }
chrono = "0.4.20"
crossterm = "0.13.3"